// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render CC answer 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de démission est estimée à 
    <strong
      class="c1 c2"
    >
      2 mois
    </strong>
    .
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      L’existence ou la durée du préavis de démission peut être prévue par une convention collective, un accord d’entreprise ou à défaut, par un usage dans l’entreprise.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Plasturgie (292)
      </strong>
    </li>
    <li>
      Catégorie professionnelle
       : 
      <strong>
        Collaborateurs
      </strong>
    </li>
    <li>
      Coefficient
       : 
      <strong>
        800 à 830 inclus
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label=" Article L.1237-1 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?cidTexte=LEGITEXT000006072050&idArticle=LEGIARTI000006901174"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’ article l.1237-1 du code du travail"
      >
         Article L.1237-1 du code du travail
      </a>
    </li>
    <li>
      <a
        aria-label="Article 15 (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005856709&cidTexte=KALITEXT000005682080&dateTexte=29990101&categorieLien=id"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article 15"
      >
        Article 15
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with no cc 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    <strong
      class="c1 c2"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas été renseignée.
  </p>
  <p>
    Le code du travail ne prévoit pas de durée de préavis de démission sauf, cas particuliers.
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      L’existence ou la durée du préavis de démission peut être prévue par une convention collective, un accord d’entreprise ou à défaut, par un usage dans l’entreprise.
    </div>
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label=" Article L.1237-1 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?cidTexte=LEGITEXT000006072050&idArticle=LEGIARTI000006901174"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’ article l.1237-1 du code du travail"
      >
         Article L.1237-1 du code du travail
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with unhandled cc 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    <strong
      class="c1 c2"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas encore été traitée par nos services.
  </p>
  <p>
    Le code du travail ne prévoit pas de durée de préavis de démission sauf, cas particuliers.
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      L’existence ou la durée du préavis de démission peut être prévue par une convention collective, un accord d’entreprise ou à défaut, par un usage dans l’entreprise.
      <br />
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/1561-cordonnerie-multiservice"
      >
        votre convention collective
      </a>
    </div>
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label=" Article L.1237-1 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?cidTexte=LEGITEXT000006072050&idArticle=LEGIARTI000006901174"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’ article l.1237-1 du code du travail"
      >
         Article L.1237-1 du code du travail
      </a>
    </li>
  </ul>
</div>
`;
